--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-padding-left: 50px:
+padding-left: 50px;
 }
         .img {
             max-width: 300px;
