--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@ padding-left: 1000px;
             width: 20%;
             display: block;
             margin: 0 auto;
+		padding-right: 100px;
         }
 
         .project-icon {
